# flame-fractal-renderer

./: .gitignore  CMakeLists.txt  FLAME_ALGO.md  FLAME_JSON.md  README.md  makefile
examples/: barnsley_fern.json  csci6360_project.json  flam3_test_1.json  flam3_test_2.json  rectangle.json  rectangle_grid.json  rectangle_maze.json  sierpinski_triangle.json  sierpinski_triangle_3d.json  sierpinski_with_variations.json  tkoz_test1.json  tkoz_test2.json  tkoz_test3.json  tkoz_test4.json  tkoz_test5.json
src/: ffr_basic.cpp  ffr_buf.cpp  ffr_buffer.cpp  ffr_img.cpp  isaac.hpp  jrand.hpp  json_small.cpp  json_small.hpp  main.cpp  mersenne_twister.hpp  renderer.hpp  settings.hpp  types.hpp  utils.cpp  utils.hpp  variations.hpp
src/renderers/: buffer_renderer.hpp  helpers.hpp  histogram_renderer.hpp  image_renderer.hpp  render_iterator.hpp  renderer.cpp  renderer.hpp
src/rng/: flame_rng.cpp  flame_rng.hpp  isaac.cpp  isaac.hpp  java_random.cpp  java_random.hpp  mersenne_twister.hpp  mt19937.cpp  mt19937.hpp
src/types/: affine.cpp  affine.hpp  constants.hpp  flame.cpp  flame.hpp  iter_state.cpp  iter_state.hpp  point.cpp  point.hpp  types.hpp  varinfo.hpp  xform.cpp  xform.hpp  xformvar.hpp
src/utils/: clock.cpp  clock.hpp  color.hpp  endian.hpp  flame.hpp  hardware.hpp  image.cpp  image.hpp  json.cpp  json.hpp  json_small.cpp  json_small.hpp  math.hpp  misc.cpp  misc.hpp  scalers.hpp  sfinae.hpp
src/variations/: linear.hpp  sinusoidal.hpp  spherical.hpp  variation_base.hpp  variation_factory.hpp  variations.hpp
src/vars/: vars.hpp  vars2d.hpp  vars_code.hpp  vars_data.hpp  (+2 more)
